<resources>
    <string name="app_name">NoteXtra</string>
    <string name="login_error">Please enter a valid login.</string>
    <string name="error_message">An error occurred while reading the data.</string>
    <string name="success_message">Data read successfully.</string>
    <string name="permission_denied_message">Permissions are required to use the app.</string>
    <string name="empty_error">This field cannot be left blank.</string>
    <string name="remember">Remember Me</string>
    <string name="login">Login</string>
    <string name="register"><u>Register</u></string>
    <string name="register_button_text">Register</string>
    <string name="registration_error">Registration failed. Please try again.</string>
    <string name="login_success">Login Successful!</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="register_success">Registration Successful!</string>
    <string name="logout_success">Logout Successful!</string>
    <string name="notes">Notes</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="enter_note">Enter your note…</string>
    <string name="empty_notes_message">No notes found. Tap the button at the bottom right to add a new note.</string>
    <string name="title">Title</string>
    <string name="add_note">Add note</string>
    <string name="please_fill_all_fields_and_select_category">Please fill all fields.</string>
    <string name="choose_category">Choose Category</string>
    <string name="empty_category_message">No category added. You can add from the + button on the right.</string>
    <string name="add_category">Add Category</string>
    <string name="category_name_hint">Category Name</string>
    <string name="date_picker_error_message">You cannot select a past date.</string>
    <string name="delete_reminder_success">Reminder deleted</string>
    <string name="delete_reminder_title">Delete Reminder</string>
    <string name="delete_reminder_message">Are you sure you want to delete this reminder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="empty_category_name">Category name cannot be empty.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="permission_neccesary">Permission is necessary for precise scheduling.</string>
    <string name="security_exception_message">Exact alarm scheduling failed: %1$s</string>
    <string name="update">Update</string>
    <string name="please_choose_category">Please choose the category you want to edit.</string>
    <string name="update_success">Update Successful</string>
    <string name="delete_success">Deletion Successful</string>
    <string name="select">Select</string>
    <string name="widget_error">Widget not available</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="add_widget">Add Widget</string>
    <string name="share">Share</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="search">Search</string>
    <string name="synchronized_success">Notes synchronized successfully.</string>
    <string name="success_load_to_database">Note loaded successfully to the device.</string>
    <string name="low">Low</string>
    <string name="medium">Medium</string>
    <string name="high">High</string>
    <string name="priority">Priority:</string>
    <string name="filter">Filter</string>
    <string name="any">Any</string>
    <string name="speech_not_supported">Your device does not support this feature.</string>
    <string name="speech_prompt" />
    <string name="start_day">Start Date</string>
    <string name="end_day">End Date</string>
    <string name="empty_category">No category added.</string>
    <string name="close">Close</string>
    <string name="no_note_history">No note history.</string>
    <string name="note_versions">Note Versions</string>
    <string name="return_version_check">Are you sure you want to return to the selected version?</string>
    <string name="return_version">Return to Version</string>
    <string name="success_load">Note added.</string>
    <string name="delete_to_database_success">Note successfully deleted from the device.</string>
    <string name="before">Before</string>
    <string name="after">After</string>
    <string name="daily">Daily</string>
    <string name="add_images">Add Image</string>
    <string name="delete_image_message">Do you want to delete this image?</string>
    <string name="handwriting_fonts">Handwriting Fonts:</string>
</resources>
