<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mobilenvision.notextra.ui.login.LoginViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="?attr/colorSplashBackground"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:alpha="0.7"
        android:onClick="@{() -> viewModel.appNameClick()}"
        android:src="@drawable/notextra_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:hint="@string/email"
        app:layout_constraintBottom_toTopOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="20dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="?attr/colorEditTextIcon"
        android:textColorHint="?attr/colorTextHint"
        android:background="@drawable/round_white_item_background"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/padlock"
        android:drawablePadding="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:imeOptions="actionDone"
        android:textColor="?attr/colorEditTextIcon"
        android:textColorHint="?attr/colorTextHint"
        android:background="@drawable/round_white_item_background"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/address_looking_up"
        style="?android:attr/progressBarStyleInverse"
        android:progressDrawable="?attr/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="@{viewModel.isBaseLoading ? View.VISIBLE : View.GONE}" />

    <CheckBox
        android:id="@+id/rememberMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/password"
        app:layout_constraintTop_toBottomOf="@id/password"
        android:text="@string/remember"
        android:textColor="?attr/colorEditTextIcon"
        android:backgroundTint="?attr/colorEditTextIcon"
        android:buttonTint="?attr/colorEditTextIcon"
        />

    <Button
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_gradient_button"
        android:textColor="?attr/colorButtonText"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:onClick="@{() -> viewModel.onLoginClick()}"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/login" />
    <TextView
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:textColor="?attr/colorEditTextIcon"
        android:textStyle="bold"
        android:onClick="@{() -> viewModel.onRegisterClick()}"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/register" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>