<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mobilenvision.notextra.ui.register.RegisterViewModel" />

    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="?attr/colorSplashBackground"
    tools:context=".ui.register.RegisterActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:alpha="0.7"
        android:src="@drawable/notextra_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:background="@drawable/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="20dp"
        android:onClick="@{() -> viewModel.onBackClick()}"
        />

    <com.mobilenvision.notextra.utils.RoundedImageView
        android:id="@+id/profileImage"
        android:layout_width="64dp"
        android:layout_height="64dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView2"
        android:layout_marginTop="50dp"
        android:background="@drawable/default_profile"
        android:onClick="@{() -> viewModel.onImageClick()}"
        android:scaleType="centerCrop"
        />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:drawableLeft="@drawable/email"
        android:drawablePadding="10dp"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/profileImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="10dp"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:textColor="?attr/colorEditTextIcon"
        android:textColorHint="?attr/colorTextHint"
        android:background="@drawable/round_white_item_background"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/padlock"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:imeOptions="actionDone"
        android:textColor="?attr/colorEditTextIcon"
        android:textColorHint="?attr/colorTextHint"
        android:background="@drawable/round_white_item_background"
        />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name"
        android:drawableLeft="@drawable/authentication"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:imeOptions="actionDone"
        android:textColor="?attr/colorEditTextIcon"
        android:textColorHint="?attr/colorTextHint"
        android:background="@drawable/round_white_item_background"
        />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name"
        android:drawableLeft="@drawable/authentication"
        android:drawablePadding="10dp"
        android:padding="10dp"
        android:layout_marginTop="10dp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/firstName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:imeOptions="actionDone"
        android:textColor="?attr/colorEditTextIcon"
        android:textColorHint="?attr/colorTextHint"
        android:background="@drawable/round_white_item_background"
        />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/address_looking_up"
        style="?android:attr/progressBarStyleInverse"
        android:progressDrawable="?attr/colorPrimaryDark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="@{viewModel.isBaseLoading ? View.VISIBLE : View.GONE}" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_gradient_button"
        android:textColor="?attr/colorButtonText"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:onClick="@{() -> viewModel.onRegisterClick()}"
        app:layout_constraintTop_toBottomOf="@id/lastName"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/register_button_text" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>