<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.mobilenvision.notextra.ui.profile.ProfileViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="?attr/colorSplashBackground"
        tools:context=".ui.register.RegisterActivity">


        <com.mobilenvision.notextra.utils.RoundedImageView
            android:id="@+id/profileImage"
            android:layout_width="128dp"
            android:layout_height="128dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="50dp"
            android:background="@drawable/default_profile"
            android:onClick="@{() -> viewModel.onImageClick()}"
            app:imageUrl="@{viewModel.profileImageUrl}"
            android:scaleType="centerCrop"
            />

        <TextView
            android:id="@+id/email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:clickable="false"
            android:layout_marginStart="5dp"
            android:textColor="?attr/colorTextHint"
            app:layout_constraintTop_toBottomOf="@id/lastName"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            android:text="@{viewModel.email}"
            app:drawableLeftCompat="@drawable/email" />


        <EditText
            android:id="@+id/firstName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/authentication"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/first_name"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            android:text="@{viewModel.firstName}"
            app:layout_constraintTop_toTopOf="@id/profileImage"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            android:imeOptions="actionDone"
            android:textColor="?attr/colorEditTextIcon"
            android:textColorHint="?attr/colorTextHint"
            android:background="?attr/colorSplashBackground"
            />

        <EditText
            android:id="@+id/lastName"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/authentication"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:inputType="text"
            android:hint="@string/last_name"
            android:textSize="24sp"
            android:text="@{viewModel.lastName}"
            android:textStyle="bold"
            android:layout_marginStart="5dp"
            app:layout_constraintTop_toBottomOf="@id/firstName"
            app:layout_constraintStart_toEndOf="@id/profileImage"
            android:imeOptions="actionDone"
            android:textColor="?attr/colorEditTextIcon"
            android:textColorHint="?attr/colorTextHint"
            android:background="?attr/colorSplashBackground"
            />

        <androidx.core.widget.ContentLoadingProgressBar
            android:id="@+id/address_looking_up"
            style="?android:attr/progressBarStyleInverse"
            android:progressDrawable="?attr/colorPrimaryDark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:visibility="@{viewModel.isBaseLoading ? View.VISIBLE : View.GONE}" />
        <CheckBox
            android:id="@+id/darkModeCheckBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dark_mode"
            app:layout_constraintTop_toBottomOf="@id/profileImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="10dp"
            android:textColor="?attr/colorEditTextIcon"
            android:backgroundTint="?attr/colorEditTextIcon"
            android:buttonTint="?attr/colorEditTextIcon"
            />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/handwriting_fonts"
            android:textStyle="bold"
            android:textColor="?attr/colorEditTextIcon"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/darkModeCheckBox"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
        <RadioGroup
            android:id="@+id/radioGroupFonts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/textView"
            app:layout_constraintStart_toStartOf="@id/textView"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioHandwriting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="NoteXtra"
                android:backgroundTint="?attr/colorEditTextIcon"
                android:buttonTint="?attr/colorEditTextIcon"
                android:textColor="?attr/colorEditTextIcon"
                android:fontFamily="@font/handwriting"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioAnandaBlack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorEditTextIcon"
                android:buttonTint="?attr/colorEditTextIcon"
                android:textColor="?attr/colorEditTextIcon"
                android:fontFamily="@font/anandablack"
                android:text="NoteXtra"
                android:textSize="24sp" />

            <RadioButton
                android:id="@+id/radioShiftyNotes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="?attr/colorEditTextIcon"
                android:buttonTint="?attr/colorEditTextIcon"
                android:textColor="?attr/colorEditTextIcon"
                android:fontFamily="@font/shiftynotes"
                android:text="NoteXtra"
                android:textSize="24sp" />

        </RadioGroup>
        <Button
            android:id="@+id/register_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_gradient_button"
            android:textColor="?attr/colorButtonText"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:onClick="@{() -> viewModel.onSaveClick()}"
            app:layout_constraintTop_toBottomOf="@id/radioGroupFonts"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/save" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>